# Twilight-Princess

./: .gitignore  CMakeLists.txt  README.md  build_iso.sh  configure.py  milestone-baseline.json
.github/: copilot-instructions.md  copilot-setup-steps.yml  requirements-ci.txt
.github/workflows/: build.yml  copilot-setup-steps.yml  port-test.yml  render-review.yml  update-copilot-runner-target.yml
assets/: black_tex.h  font_data.h  l_sightDL__d_a_player.h  msg_data.h  msg_data_it.h
build-pc/: CMakeCache.txt
docs/: PROGRESS.md  agent-port-workflow.md  ai-agent-testing-plan.md  automated-testing-guide.md  dolsdk2004-reference.md  multiplatform-port-plan.md  port-progress.md
include/: DynamicLink.h  angle_utils.h  global.h
include/JSystem/: JGeometry.h
include/JSystem/J2DGraph/: J2DPane.h
include/JSystem/J3DGraphAnimator/: J3DAnimation.h  J3DJoint.h  J3DMaterialAnm.h
include/JSystem/J3DGraphBase/: J3DDrawBuffer.h  J3DFifo.h  J3DTransform.h
include/JSystem/J3DGraphLoader/: J3DMaterialFactory.h  J3DModelLoader.h
include/JSystem/JAudio2/: JASHeapCtrl.h
include/JSystem/JGadget/: define.h  search.h
include/JSystem/JHostIO/: JORMContext.h
include/JSystem/JKernel/: JKRDvdArchive.h  JKRExpHeap.h  JKRMemArchive.h
include/JSystem/JMath/: JMath.h
include/JSystem/JMessage/: processor.h
include/JSystem/JUtility/: JUTGraphFifo.h  JUTTexture.h
include/Z2AudioLib/: Z2SceneMgr.h  Z2SeMgr.h
include/d/: d_attention.h  d_com_inf_game.h  d_event.h  d_file_select.h  d_resorce.h  d_s_play.h  d_save.h  d_stage.h
include/d/actor/: d_a_mg_fshop.h  d_a_npc_cdn3.h  d_a_tag_schedule.h  d_a_title.h
include/dolphin/: os.h  types.h
include/dolphin/gx/: GXGeometry.h
include/f_ap/: f_ap_game.h
include/f_op/: f_op_actor_mng.h
include/m_Do/: m_Do_MemCard.h  m_Do_MemCardRWmng.h  m_Do_graphic.h  m_Do_mtx.h
include/m_Re/: m_Re_controller_pad.h
include/pal/: pal_audio.h  pal_endian.h  pal_error.h  pal_input.h  pal_intrinsics.h  pal_j3d_swap.h  pal_milestone.h  pal_platform.h  pal_save.h  pal_verify.h  pal_window.h
include/pal/gx/: gx_bgfx.h  gx_capture.h  gx_displaylist.h  gx_render.h  gx_screenshot.h  gx_state.h  gx_stub_tracker.h  gx_tev.h  gx_tev_shaders_precompiled.h  gx_texture.h
include/revolution/: os.h  types.h
include/revolution/gx/: GXGeometry.h  GXStruct.h  GXVert.h
include/revolution/os/: OSExec.h
include/revolution/private/: GXRegs.h
src/JSystem/J2DGraph/: J2DAnimation.cpp  J2DPicture.cpp  J2DPictureEx.cpp  J2DScreen.cpp  J2DTextBoxEx.cpp
src/JSystem/J3DGraphAnimator/: J3DAnimation.cpp  J3DJoint.cpp  J3DModel.cpp  J3DMtxBuffer.cpp
src/JSystem/J3DGraphBase/: J3DDrawBuffer.cpp  J3DGD.cpp  J3DPacket.cpp  J3DShape.cpp  J3DShapeDraw.cpp  J3DShapeMtx.cpp  J3DTevs.cpp  J3DTransform.cpp
src/JSystem/J3DGraphLoader/: J3DAnmLoader.cpp  J3DClusterLoader.cpp  J3DMaterialFactory.cpp  J3DModelLoader.cpp
src/JSystem/JAudio2/: JAISeMgr.cpp  JAUInitializer.cpp
src/JSystem/JFramework/: JFWDisplay.cpp  JFWSystem.cpp
src/JSystem/JGadget/: binary.cpp
src/JSystem/JKernel/: JKRAram.cpp  JKRAramArchive.cpp  JKRArchivePri.cpp  JKRArchivePub.cpp  JKRDecomp.cpp  JKRDvdAramRipper.cpp  JKRDvdArchive.cpp  JKRDvdRipper.cpp  JKRExpHeap.cpp  JKRHeap.cpp  JKRMemArchive.cpp  JKRSolidHeap.cpp  JKRThread.cpp
src/JSystem/JUtility/: JUTNameTab.cpp  JUTTexture.cpp
src/SSystem/SComponent/: c_node.cpp  c_node_iter.cpp  c_tag_iter.cpp
src/Z2AudioLib/: Z2AudioMgr.cpp  Z2LinkMgr.cpp  Z2SceneMgr.cpp  Z2SeqMgr.cpp  Z2SoundMgr.cpp  Z2SoundObject.cpp
src/c/: c_dylink.cpp
src/d/: d_a_itembase_static.cpp  d_attention.cpp  d_bg_s_capt_poly.cpp  d_camera.cpp  d_com_inf_game.cpp  d_com_static.cpp  d_drawlist.cpp  d_envse.cpp  d_event.cpp  d_event_data.cpp  d_event_manager.cpp  d_file_select.cpp  d_gameover.cpp  d_k_wmark.cpp  d_k_wpillar.cpp  d_kankyo.cpp  d_kankyo_wether.cpp  d_map_path.cpp  d_map_path_dmap.cpp  d_menu_collect.cpp  d_menu_dmap.cpp  d_menu_fmap2D.cpp  d_menu_letter.cpp  d_menu_option.cpp  d_meter2_info.cpp  d_meter_HIO.cpp  d_meter_map.cpp  d_msg_flow.cpp  d_msg_object.cpp  d_particle.cpp  d_resorce.cpp  d_s_logo.cpp  d_s_play.cpp  d_s_room.cpp  d_s_title.cpp  d_save.cpp  d_stage.cpp  d_tresure.cpp
src/d/actor/: d_a_alink_effect.inc  d_a_bg.cpp  d_a_cow.cpp  d_a_e_mk.cpp  d_a_e_po.cpp  d_a_e_wb.cpp  d_a_horse.cpp  d_a_kago.cpp  d_a_mg_fshop.cpp  d_a_movie_player.cpp  d_a_npc.cpp  d_a_npc4.cpp  d_a_npc_bouS.cpp  d_a_npc_cdn3.cpp  d_a_npc_chin.cpp  d_a_npc_drainSol.cpp  d_a_npc_du.cpp  d_a_npc_taro.cpp  d_a_npc_wrestler.cpp  d_a_npc_ykw.cpp  d_a_obj_maki.cpp  d_a_obj_sekizoa.cpp  d_a_player.cpp  d_a_tag_camera.cpp  d_a_title.cpp  d_a_vrbox.cpp  d_a_vrbox2.cpp
src/f_ap/: f_ap_game.cpp
src/f_op/: f_op_actor.cpp  f_op_actor_mng.cpp  f_op_scene_req.cpp
src/f_pc/: f_pc_base.cpp  f_pc_create_req.cpp  f_pc_delete_tag.cpp  f_pc_deletor.cpp  f_pc_draw.cpp  f_pc_executor.cpp  f_pc_layer_tag.cpp  f_pc_manager.cpp  f_pc_method.cpp  f_pc_priority.cpp  f_pc_profile.cpp  f_pc_searcher.cpp  f_pc_stdcreate_req.cpp
src/m_Do/: m_Do_MemCard.cpp  m_Do_MemCardRWmng.cpp  m_Do_audio.cpp  m_Do_controller_pad.cpp  m_Do_dvd_thread.cpp  m_Do_ext.cpp  m_Do_graphic.cpp  m_Do_machine.cpp  m_Do_main.cpp  m_Do_mtx.cpp  m_Do_printf.cpp
src/m_Re/: m_Re_controller_pad.cpp
src/pal/: fmt_smoke_test.cpp  pal_audio.cpp  pal_crash.cpp  pal_endian.cpp  pal_error.cpp  pal_game_stubs.cpp  pal_gx_stubs.cpp  pal_input.cpp  pal_j3d_swap.cpp  pal_math_stubs.cpp  pal_milestone.cpp  pal_os_stubs.cpp  pal_profile_list.cpp  pal_remaining_stubs.cpp  pal_save.cpp  pal_sdk_stubs.cpp  pal_verify.cpp  pal_window.cpp
tests/: render-baseline.json
tests/golden/: README.md
tests/reference_frames/: README.md
tools/: check_bmp_coverage.py  check_milestone_regression.py  convert_frames.py  crash-report.sh  download_tool.py  normalize_cache_mtime.py  parse_milestones.py  project.py  quick-test.sh  rarc_pack.py  render_dev.py  restore_mtime.py  self-test.sh  setup_game_data.py  validate_milestones.py  validate_telemetry.py  verify_port.py
tools/frame_compare/: README.md  frame_compare.py
(+25 files in other folders)
